--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
     <head>
         <title>Bloc James</title>
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
+         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
-    <body>
-        <div></div>
-        <div>
-            <h1>Bloc James</h1>
-            <h3>Turn the music up!</h3>
-        </div>
+    <body class="landing">
+        <nav class="navbar"> <!-- nav bar -->
+             <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
+        </nav>
+        <section class="hero-content">
+            <h1 class="hero-title">Turn the music up!</h1>
+        </section>
         <div>
             <div>
                  <h5>Choose your music</h5>
